--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
       <input type="datetime-local">
       <input type="week">
       <input type="reset">
-
+      <label>
+        <div>City</div>
+        <input list="citySelector" type="text">
+      </label>
+      <datalist id="citySelector">
+        <option>Zaporizhzhia</option>
+        <option>Kyiv</option>
+        <option >Lviv</option>
+      </datalist>
 
 
       <button type="submit">Test</button>
