Add clip-path example

--- a/index.html
+++ b/index.html
@@ -8,93 +8,15 @@
     <title>Document</title>
   </head>
   <body>
-    <form>
-      <label>
-        <div>login</div>
-        <input
-          name="username"
-          type="text"
-          minlength="5"
-          maxlength="10"
-          placeholder="user"
-          required
-        />
-      </label>
-      <!--<input type="button" value="test" />-->
-      <label>
-        <div>password</div>
-        <input
-          name="password"
-          type="password"
-          minlength="5"
-          maxlength="15"
-          placeholder="password"
-          required
-        />
-      </label>
-      <label>
-        <span>Are you adult?</span>
-        <input type="checkbox">
-      </label>
+    <article class="card-wrapper">
+      <div class="photo-wrapper">
+        <img class="profile-image" src="./essets/images/portrait.jpg" alt="John Smith">
+      </div>
+      <div class="content-container">
+        <h2>John Smith</h2>
 
-      <input name="email" type="email" placeholder="email" required>
-      <fieldset>
-        <legend>Gender</legend>
-        <label>
-        Male:
-       <input value="male" name="gender" type="radio">
-       </label>
-       <label>
-         Female:
-         <input value="female" name="gender" type="radio">
-       </label>
-      </fieldset>
-      <input name="color" type="color">
-      <input type="range">
-      <input name="age" type="number" min="0" max="10" step="5">
-      <label>
-        <input name="document" type="file">
-      </label>
-      <input type="time">
-      <input type="date">
-      <input type="datetime-local">
-      <input type="week">
-      <input type="reset">
-      <label>
-        <div>City</div>
-        <input list="citySelector" type="text">
-      </label>
-      <datalist id="citySelector">
-        <option>Zaporizhzhia</option>
-        <option>Kyiv</option>
-        <option >Lviv</option>
-      </datalist>
-
-
-      <button type="submit">Test</button>
-    </form>
+      </div>
+    </article>
+  
   </body>
 </html>
-<!--<input type="button">
-<input type="checkbox">
-<input type="color">
-<input type="date">
-<input type="datetime-local">
-<input type="email">
-<input type="file">
-<input type="hidden">
-<input type="image">
-<input type="month">
-<input type="number">
-<input type="password">
-<input type="radio">
-<input type="range">
-<input type="reset">
-<input type="search">
-<input type="submit">
-<input type="tel">
-<input type="text">
-<input type="time">
-<input type="url">
-<input type="week">*/
--->
