Add collmns + import reset.css

--- a/index.html
+++ b/index.html
@@ -8,15 +8,150 @@
     <title>Document</title>
   </head>
   <body>
-    <article class="card-wrapper">
-      <div class="photo-wrapper">
-        <img class="profile-image" src="./essets/images/portrait.jpg" alt="John Smith">
-      </div>
-      <div class="content-container">
-        <h2>John Smith</h2>
-
-      </div>
-    </article>
-  
+    <header>HEADER</header>
+    <section>
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti,
+          explicabo reprehenderit natus fugit placeat consequuntur recusandae,
+          ut cumque odit quos tempora magnam, iure iusto! Saepe totam voluptatem
+          eos delectus dolore dolorem consequatur illo eligendi amet repellat,
+          assumenda, in, eius vel quasi optio laboriosam. Deleniti
+          necessitatibus iusto quo ipsa dolore aliquid quidem expedita, debitis
+          maxime voluptatibus sequi nihil tempore dignissimos cupiditate minus
+          alias laboriosam facilis. Modi esse animi, dicta tempore veritatis
+          eveniet quod est impedit porro earum debitis quibusdam cumque
+          architecto ullam rerum sapiente quis quasi dolore corrupti cupiditate
+          nulla unde error ipsum enim. Magni, recusandae. Amet ut perferendis
+          rem nostrum corrupti dolorum modi, quas dolor incidunt eveniet fugit
+          dolorem animi consequatur nobis laborum saepe, officia dolore
+          inventore temporibus adipisci magni sint sit obcaecati. Vitae tenetur
+          veritatis sequi ut cumque quos consectetur impedit quae, repellendus
+          est nihil unde corrupti harum distinctio laboriosam amet libero quis
+          nam, quasi, odio quibusdam. Placeat numquam quaerat ea. Rerum
+          praesentium repudiandae voluptatum labore aut deleniti incidunt!
+          Aperiam ducimus at itaque dolorum, iure minima dicta voluptas dolor
+          doloremque quibusdam necessitatibus beatae a quaerat quia expedita
+          deserunt sequi fugiat aliquid dolore id! Iusto laboriosam ea, rerum
+          soluta corporis odit, error nam reprehenderit eaque reiciendis
+          nesciunt quae blanditiis voluptas quas dolores vitae tenetur fugiat
+          repellat! Reiciendis, cupiditate placeat, facilis nesciunt sint
+          adipisci fuga saepe ipsam repudiandae delectus impedit quam alias eum,
+          nobis amet. Recusandae nostrum unde et dolore, soluta natus a? Odio
+          est pariatur deleniti accusantium, voluptate asperiores voluptatibus
+          veniam magnam repellat magni qui molestiae necessitatibus tenetur
+          eligendi non iste commodi mollitia ab, expedita nihil officiis optio
+          autem sequi? Ex hic soluta repellat temporibus labore beatae odit.
+          Quae beatae suscipit explicabo amet atque, eos voluptatibus aut
+          quaerat blanditiis unde accusantium officiis deleniti voluptas veniam
+          saepe sequi fugit, itaque voluptates voluptatum nisi! Ad sunt,
+          nesciunt soluta dolores eaque officiis quisquam voluptate accusamus
+          fugit quia impedit, doloribus quas. Deleniti, debitis consectetur.
+          Voluptates est delectus distinctio, aliquid quasi ratione corrupti
+          dicta ut rem in placeat a adipisci cupiditate deserunt odio esse
+          possimus? Doloribus ea minus voluptatem error expedita. Voluptatibus
+          ipsum et nisi officiis mollitia non, incidunt ab saepe fuga totam
+          error, aliquam ad cupiditate omnis repudiandae. Consequatur quas esse
+          quidem iure, animi quam nobis. Animi, deserunt enim? Dolorem, vel!
+          Blanditiis, neque numquam. Vero alias ducimus a delectus? Commodi
+          assumenda unde, officiis at porro necessitatibus vitae ratione magnam,
+          possimus iste placeat quas cumque distinctio ducimus perspiciatis
+          adipisci suscipit, ut in neque laborum excepturi. Officia assumenda
+          neque adipisci accusantium praesentium quasi modi culpa blanditiis,
+          tenetur esse, obcaecati reprehenderit voluptates fugit deserunt eum
+          amet delectus labore perferendis laborum, minima fugiat? Praesentium
+          et qui odio dolor fugiat nihil perferendis eius facilis ipsa eum. In
+          impedit repellendus, dolorem atque laudantium adipisci a obcaecati,
+          qui culpa consectetur, ullam facilis. Amet dolore ducimus earum, at
+          enim nulla error, assumenda magnam architecto omnis ipsa tempora
+          consequuntur excepturi et eum corporis doloremque est ex sit esse.
+          Necessitatibus blanditiis incidunt veniam numquam quaerat! Blanditiis
+          quibusdam quaerat reiciendis atque, laborum praesentium voluptates
+          quam eum pariatur impedit veritatis, minus, sint quisquam autem!
+          Repellat excepturi deserunt vitae nostrum inventore culpa, blanditiis
+          laboriosam, est ipsa odit hic reprehenderit quos cupiditate laborum
+          praesentium! Impedit ipsa veniam architecto illum eos officia quasi
+          consequatur alias delectus repellendus voluptatibus et ab eveniet
+          aspernatur esse accusantium optio, odit mollitia! Quis animi deleniti
+          itaque voluptate, ipsum nemo nostrum eum reiciendis! Autem corporis,
+          aut quisquam id quo repellendus voluptates veniam perferendis incidunt
+          provident laudantium velit est explicabo accusamus et quas consectetur
+          reiciendis iure dolores eius repellat, atque alias eligendi. Inventore
+          aliquid possimus, provident, expedita, magnam sequi est veniam
+          reiciendis quos quam dolor odit saepe iste doloribus dolores dolorem
+          molestias laboriosam voluptatem voluptatum corporis eligendi quod
+          deleniti. Esse dolorem eos error vitae ratione temporibus tenetur,
+          molestiae rerum nulla aut maxime tempore ipsa eaque nostrum! Porro
+          nihil a sunt libero velit veritatis blanditiis et officiis dolore hic
+          eos molestias alias, reprehenderit rerum eius. Quia, animi enim,
+          veniam consequatur explicabo aliquid expedita accusantium quas eaque
+          ullam impedit in nostrum voluptatem est sequi possimus. Exercitationem
+          sequi animi eum odit, optio officia, laudantium quod vel nobis tempore
+          quasi pariatur alias harum inventore reprehenderit aspernatur fugiat
+          expedita. Voluptate cumque minima placeat veniam nostrum facilis
+          repellendus, tenetur, quaerat quos fuga dolore, alias sequi dolorem
+          doloribus velit quod ipsa similique nobis! Obcaecati sit facilis
+          excepturi corrupti? Error, numquam nihil iure ut sint expedita magnam
+          qui quo eligendi temporibus ipsum in ratione? Distinctio aliquam
+          fugiat eos voluptatem tenetur exercitationem obcaecati voluptate,
+          ducimus laborum praesentium doloremque illum incidunt expedita
+          officia! Accusamus necessitatibus sequi omnis modi quis sit
+          voluptatibus est harum rerum ratione officia suscipit vero, autem
+          ipsum ipsam recusandae nostrum exercitationem, blanditiis perferendis
+          similique delectus incidunt? Ipsa dolores, aperiam aliquid, cumque
+          quam fugiat repellendus nulla et quia a, reprehenderit voluptatibus
+          quas ipsam impedit nobis assumenda. Corporis eligendi debitis minima
+          deleniti in soluta ipsum iste dolores? Ipsa earum quisquam nulla
+          obcaecati perferendis blanditiis maiores cum dolore deleniti provident
+          dignissimos cumque aliquam voluptatibus et repudiandae ad animi
+          impedit nobis iure, reprehenderit numquam! Adipisci porro fugiat
+          asperiores laudantium nemo. Iure, veniam eaque natus quam cum cumque
+          maiores ducimus et deserunt. Commodi, iusto quam sequi obcaecati
+          exercitationem perspiciatis ullam, nam officia cumque repudiandae
+          aperiam impedit delectus ratione laborum perferendis harum ipsa
+          ducimus aliquid nesciunt quibusdam magnam. Ipsa explicabo dignissimos
+          asperiores veniam consequatur, natus provident omnis assumenda esse
+          hic suscipit odit repudiandae quidem ullam, quis iusto quam. Tempora
+          reiciendis hic quam facilis veritatis delectus voluptatem expedita
+          veniam exercitationem, excepturi animi blanditiis, voluptates mollitia
+          est, amet in repellendus magnam. Deleniti, animi rem harum magnam aut
+          repellendus exercitationem adipisci blanditiis obcaecati, optio dolor
+          totam numquam suscipit cum aspernatur. Quibusdam suscipit facilis
+          doloribus est repudiandae perspiciatis aut autem nostrum! Error
+          impedit aut eum? Vitae repellendus odio ipsam! Quas error voluptates
+          ea modi asperiores fugiat ducimus. Necessitatibus neque quaerat
+          perferendis incidunt nam eius ipsam recusandae eaque quis, consequatur
+          facere, non vitae repudiandae! Eaque reiciendis voluptatem hic minus
+          veniam expedita sit explicabo porro consectetur culpa, ducimus quae
+          dolorem, accusamus velit officiis laudantium ipsum alias maiores
+          necessitatibus at eum fuga? Recusandae dolorem officia eius dicta esse
+          quisquam eos nostrum consequuntur ratione sapiente modi inventore quae
+          assumenda ex, nesciunt libero natus delectus facilis voluptas commodi!
+          Beatae, repudiandae maiores? Ex, molestias excepturi. Veniam, ducimus
+          tenetur delectus vitae expedita alias quisquam asperiores minus fugit
+          pariatur quod architecto culpa atque, aperiam saepe magnam voluptates
+          eaque rem cumque? Eveniet voluptatum ullam, delectus accusamus
+          similique pariatur sed ex, quaerat, consectetur tempore distinctio
+          voluptates. Quis fugit ab nesciunt veritatis, cum praesentium maxime
+          assumenda esse nam beatae vel sit illo, magni facere saepe! Itaque sed
+          soluta adipisci consectetur labore exercitationem nulla rerum
+          asperiores quis, doloremque aspernatur neque consequatur, illo, dolore
+          velit odit eius hic enim? Amet neque itaque officia id impedit
+          voluptate exercitationem? Ea quidem numquam enim rem necessitatibus
+          facilis aperiam at tenetur perferendis. Quia quae cupiditate, amet et
+          tempora culpa quibusdam est velit illo ipsam eius neque expedita animi
+          beatae officia nemo non eos repellat perspiciatis nam hic.
+          Consequuntur totam atque quae et, porro accusantium omnis error
+          aliquam. Sapiente ratione, vel voluptatem, impedit saepe recusandae
+          architecto facilis fugiat, dolores accusamus voluptatum repellendus
+          tempore eos dolorum hic nemo officiis harum asperiores. Architecto a
+          expedita deleniti excepturi assumenda, ducimus soluta? Reiciendis
+          rerum repudiandae cumque assumenda culpa. Itaque amet in tempore
+          nostrum autem rerum, laboriosam consectetur, labore magnam laudantium
+          facilis nam reiciendis ex corporis?
+        </p>
+      </article>
+    </section>
+    <footer>FOOTER</footer>
   </body>
 </html>
